ihm/Grammar_antlr/GcodeParser.py
# Generated from Gcode.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class GcodeParser ( Parser ):

    grammarFileName = "Gcode.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'N'", "'G'", "'M30'", "'X'", "'Y'", "'I'", 
                     "'J'", "'.'", "'\\n'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "SIGN", "INT", "WS" ]

    RULE_gcode = 0
    RULE_statement = 1
    RULE_programEnd = 2
    RULE_lineNumber = 3
    RULE_codFunc = 4
    RULE_mEnd = 5
    RULE_coord = 6
    RULE_coordX = 7
    RULE_coordY = 8
    RULE_coordI = 9
    RULE_coordJ = 10
    RULE_coordValue = 11
    RULE_lineEnd = 12
    RULE_signedInt = 13

    ruleNames =  [ "gcode", "statement", "programEnd", "lineNumber", "codFunc", 
                   "mEnd", "coord", "coordX", "coordY", "coordI", "coordJ", 
                   "coordValue", "lineEnd", "signedInt" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    SIGN=10
    INT=11
    WS=12

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class GcodeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def programEnd(self):
            return self.getTypedRuleContext(GcodeParser.ProgramEndContext,0)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GcodeParser.StatementContext)
            else:
                return self.getTypedRuleContext(GcodeParser.StatementContext,i)


        def getRuleIndex(self):
            return GcodeParser.RULE_gcode

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGcode" ):
                listener.enterGcode(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGcode" ):
                listener.exitGcode(self)




    def gcode(self):

        localctx = GcodeParser.GcodeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_gcode)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 29 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 28
                    self.statement()

                else:
                    raise NoViableAltException(self)
                self.state = 31 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

            self.state = 33
            self.programEnd()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def lineNumber(self):
            return self.getTypedRuleContext(GcodeParser.LineNumberContext,0)


        def codFunc(self):
            return self.getTypedRuleContext(GcodeParser.CodFuncContext,0)


        def lineEnd(self):
            return self.getTypedRuleContext(GcodeParser.LineEndContext,0)


        def coord(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(GcodeParser.CoordContext)
            else:
                return self.getTypedRuleContext(GcodeParser.CoordContext,i)


        def getRuleIndex(self):
            return GcodeParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = GcodeParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 35
            self.lineNumber()
            self.state = 36
            self.codFunc()
            self.state = 40
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 240) != 0):
                self.state = 37
                self.coord()
                self.state = 42
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 43
            self.lineEnd()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProgramEndContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def lineNumber(self):
            return self.getTypedRuleContext(GcodeParser.LineNumberContext,0)


        def mEnd(self):
            return self.getTypedRuleContext(GcodeParser.MEndContext,0)


        def getRuleIndex(self):
            return GcodeParser.RULE_programEnd

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgramEnd" ):
                listener.enterProgramEnd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgramEnd" ):
                listener.exitProgramEnd(self)




    def programEnd(self):

        localctx = GcodeParser.ProgramEndContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_programEnd)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 45
            self.lineNumber()
            self.state = 46
            self.mEnd()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LineNumberContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(GcodeParser.INT, 0)

        def getRuleIndex(self):
            return GcodeParser.RULE_lineNumber

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLineNumber" ):
                listener.enterLineNumber(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLineNumber" ):
                listener.exitLineNumber(self)




    def lineNumber(self):

        localctx = GcodeParser.LineNumberContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_lineNumber)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 48
            self.match(GcodeParser.T__0)
            self.state = 49
            self.match(GcodeParser.INT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CodFuncContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(GcodeParser.INT, 0)

        def getRuleIndex(self):
            return GcodeParser.RULE_codFunc

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCodFunc" ):
                listener.enterCodFunc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCodFunc" ):
                listener.exitCodFunc(self)




    def codFunc(self):

        localctx = GcodeParser.CodFuncContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_codFunc)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 51
            self.match(GcodeParser.T__1)
            self.state = 52
            self.match(GcodeParser.INT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MEndContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return GcodeParser.RULE_mEnd

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMEnd" ):
                listener.enterMEnd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMEnd" ):
                listener.exitMEnd(self)




    def mEnd(self):

        localctx = GcodeParser.MEndContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_mEnd)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 54
            self.match(GcodeParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CoordContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def coordX(self):
            return self.getTypedRuleContext(GcodeParser.CoordXContext,0)


        def coordY(self):
            return self.getTypedRuleContext(GcodeParser.CoordYContext,0)


        def coordI(self):
            return self.getTypedRuleContext(GcodeParser.CoordIContext,0)


        def coordJ(self):
            return self.getTypedRuleContext(GcodeParser.CoordJContext,0)


        def getRuleIndex(self):
            return GcodeParser.RULE_coord

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCoord" ):
                listener.enterCoord(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCoord" ):
                listener.exitCoord(self)




    def coord(self):

        localctx = GcodeParser.CoordContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_coord)
        try:
            self.state = 60
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [4]:
                self.enterOuterAlt(localctx, 1)
                self.state = 56
                self.coordX()
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 2)
                self.state = 57
                self.coordY()
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 3)
                self.state = 58
                self.coordI()
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 4)
                self.state = 59
                self.coordJ()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CoordXContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def coordValue(self):
            return self.getTypedRuleContext(GcodeParser.CoordValueContext,0)


        def getRuleIndex(self):
            return GcodeParser.RULE_coordX

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCoordX" ):
                listener.enterCoordX(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCoordX" ):
                listener.exitCoordX(self)




    def coordX(self):

        localctx = GcodeParser.CoordXContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_coordX)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self.match(GcodeParser.T__3)
            self.state = 63
            self.coordValue()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CoordYContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def coordValue(self):
            return self.getTypedRuleContext(GcodeParser.CoordValueContext,0)


        def getRuleIndex(self):
            return GcodeParser.RULE_coordY

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCoordY" ):
                listener.enterCoordY(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCoordY" ):
                listener.exitCoordY(self)




    def coordY(self):

        localctx = GcodeParser.CoordYContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_coordY)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 65
            self.match(GcodeParser.T__4)
            self.state = 66
            self.coordValue()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CoordIContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def coordValue(self):
            return self.getTypedRuleContext(GcodeParser.CoordValueContext,0)


        def getRuleIndex(self):
            return GcodeParser.RULE_coordI

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCoordI" ):
                listener.enterCoordI(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCoordI" ):
                listener.exitCoordI(self)




    def coordI(self):

        localctx = GcodeParser.CoordIContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_coordI)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 68
            self.match(GcodeParser.T__5)
            self.state = 69
            self.coordValue()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CoordJContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def coordValue(self):
            return self.getTypedRuleContext(GcodeParser.CoordValueContext,0)


        def getRuleIndex(self):
            return GcodeParser.RULE_coordJ

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCoordJ" ):
                listener.enterCoordJ(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCoordJ" ):
                listener.exitCoordJ(self)




    def coordJ(self):

        localctx = GcodeParser.CoordJContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_coordJ)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self.match(GcodeParser.T__6)
            self.state = 72
            self.coordValue()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CoordValueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def signedInt(self):
            return self.getTypedRuleContext(GcodeParser.SignedIntContext,0)


        def INT(self):
            return self.getToken(GcodeParser.INT, 0)

        def getRuleIndex(self):
            return GcodeParser.RULE_coordValue

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCoordValue" ):
                listener.enterCoordValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCoordValue" ):
                listener.exitCoordValue(self)




    def coordValue(self):

        localctx = GcodeParser.CoordValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_coordValue)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 74
            self.signedInt()
            self.state = 77
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==8:
                self.state = 75
                self.match(GcodeParser.T__7)
                self.state = 76
                self.match(GcodeParser.INT)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LineEndContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return GcodeParser.RULE_lineEnd

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLineEnd" ):
                listener.enterLineEnd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLineEnd" ):
                listener.exitLineEnd(self)




    def lineEnd(self):

        localctx = GcodeParser.LineEndContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_lineEnd)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.match(GcodeParser.T__8)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SignedIntContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(GcodeParser.INT, 0)

        def SIGN(self):
            return self.getToken(GcodeParser.SIGN, 0)

        def getRuleIndex(self):
            return GcodeParser.RULE_signedInt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSignedInt" ):
                listener.enterSignedInt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSignedInt" ):
                listener.exitSignedInt(self)




    def signedInt(self):

        localctx = GcodeParser.SignedIntContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_signedInt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==10:
                self.state = 81
                self.match(GcodeParser.SIGN)


            self.state = 84
            self.match(GcodeParser.INT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





